# rust-fourier-widget

./: Cargo.toml  README.md  fourier_widget.js  fourier_widget_bg.wasm  index.html  sw.js
src/: app.rs  lib.rs  main.rs
