[package]
name = "test_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_plot = "0.31.0"
meval = "0.2.0"
peroxide = "0.39.2"
tracing-subscriber = "0.3.16"
itertools = "0.11.0"
